# fastapi

./: .gitignore  pyproject.toml
tutorial/: multiple_params.py  param.py  return.py
tutorial/fastapi/: dependency.py  extra_model.py  form.py  login.py  request_files.py  status.py
