[tool.poetry]
name = "fastapi-sample"
version = "0.1.0"
description = ""
authors = ["taro"]
readme = "README.md"
packages = [{include = "fastapi_sample"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.100.0"}
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
